--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -18,7 +18,7 @@
   border: 1px solid #ffffff;
   color: #ffffff;
   padding: 6px 20px 6px 20px;
-
+  cursor: pointer;
   font-size: 15px;
   font-family: Roboto;
 }
